@@ -204,6 +204,7 @@ void PlaylistOpener::okClickedSlot()
 {
     if( options->currentConversionOptions() )
     {
+        options->accepted();
         emit done( urls, options->currentConversionOptions() );
         accept();
     }
