@@ -124,6 +124,7 @@ void UrlOpener::okClickedSlot()
     {
         if( options->currentConversionOptions() )
         {
+            options->accepted();
             emit done( urls, options->currentConversionOptions() );
             accept();
         }
