@@ -61,6 +61,9 @@ public slots:
     /** Set the current output directory */
     void setOutputDirectory( const QString& directory );
 
+    /** Should be called if the conversion options have benn accepted by the user */
+    void accepted();
+
 private:
     Config *config;
 
